<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add">

    <fragment
        android:id="@+id/navigation_add"
        android:name="fr.imt_atlantique.imteco.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="fr.imt_atlantique.imteco.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_compare"
        android:name="fr.imt_atlantique.imteco.ui.compare.CompareFragment"
        android:label="@string/title_compare"
        tools:layout="@layout/fragment_compare" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="fr.imt_atlantique.imteco.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>