<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3">

    <TextView
        android:id="@+id/title_resetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7bbc2d"
        android:padding="20dp"
        android:text="@string/title_resetpassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        tools:layout_editor_absoluteX="2dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_resetpassword">

        <ImageView
            android:id="@+id/reset_img"
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:contentDescription="@string/resetpassword_img"
            android:src="@drawable/port"
            app:srcCompat="@drawable/oubli" />

        <LinearLayout
            android:id="@+id/Change_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:text="@string/enter_your_username"
                android:textColor="#263238" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#263238"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_your_new_password"
                android:textColor="#263238" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textVisiblePassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#263238"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="none|textVisiblePassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#263238"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Change_secret_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/answer_your_secret_question"
                android:textColor="#263238" />

            <TextView
                android:id="@+id/secret_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/what_is_your_dad_s_birthday"
                android:textColor="#0D47A1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/your_answer"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#263238"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF7448"
            android:text="@string/submit"
            android:textColor="#311B92"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>