<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/title_compare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:padding="20dp"
        android:text="@string/title_compare"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_addatrip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_compare"
        app:layout_constraintVertical_bias="0.441">

        <LinearLayout
            android:id="@+id/transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#8BC34A"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/input_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:autofillHints="0"
                    android:elegantTextHeight="true"
                    android:ems="10"
                    android:hint="@string/distance"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textColorHint="#000000" />

                <TextView
                    android:id="@+id/km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/img_transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/voiture"
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/car"
                    android:src="?android:attr/fingerprintAuthDrawable"
                    app:srcCompat="@drawable/ic_account" />

                <ImageView
                    android:id="@+id/train"
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/train"
                    android:src="?android:attr/fingerprintAuthDrawable" />

                <ImageView
                    android:id="@+id/avion"
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/avion"
                    android:src="?android:attr/fingerprintAuthDrawable" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#CDDC39"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/input_nb_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nb_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:elegantTextHeight="true"
                    android:ems="10"
                    android:hint="@string/mail"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_mail"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:contentDescription="@string/mail"
                android:src="@android:drawable/ic_dialog_email"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/visio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFEB3B"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/input_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:elegantTextHeight="true"
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <TextView
                    android:id="@+id/sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_visio"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:contentDescription="@string/visio"
                android:src="@android:drawable/presence_video_online"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_compare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tab_resultat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/compare1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total 1 : CO2 "
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/VS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="vs"
                    android:textColor="#FF0000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/compare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total 1 : CO2 "
                    android:textSize="25sp" />
            </LinearLayout>

            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reset" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>